# who-will-viral

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.local  README.md  SECURITY.md  justfile  mlflow.db  pyproject.toml  read.py  requirements.txt  zensical.toml
.github/workflows/: pipeline.yml
CHANGELOG/: 0.1.0.md
docs/: api.md  index.md  installation.md  usage.md
dummy_path/models--sentence-transformers--all-MiniLM-L6-v2/refs/: main
dummy_path/models--sentence-transformers--all-MiniLM-L6-v2/snapshots/c9745ed1d9f207416be6d2e6f8de32d1f16199bf/: README.md
models/: pca_model.pkl  scaler.joblib
notebooks/: 01_data_acquisition_API.ipynb  01_data_acquisition_scraping.ipynb  02_data_exploration_EDA.ipynb  03_data_cleaning.ipynb  04_feature_extraction.ipynb  05_feature_scaling_selection.ipynb  06_modeling.ipynb  06_modeling_smote.ipynb  1-data-acquisition-API.ipynb  1-data-acquisition-scraping.ipynb  2-data-exploration-EDA.ipynb  3-data-cleaning.ipynb  4-feature_extraction.ipynb  5-feature-scaling-selection.ipynb  6-modeling-smote.ipynb  6-modeling.ipynb  EDA.ipynb  Youtube_dataset.ipynb  cleaning.ipynb  feature_extraction.ipynb
pipelines/: __init__.py  acquisition.py  cleaning.py  validation.py  validation_cleaned.py
pipelines/data_acquisition/: __init__.py  youtube_api.py  youtube_database.py  youtube_scraper.py
reports/figures/: Dashboard.pbix
reports/results/: XGBoost_report.txt
reports/validation/: gx_report_20260501_230302.txt  gx_report_20260503_221221.txt  pandas_report_20260501_230312.txt  quick_summary_20260501_230241.txt
scripts/: release.py
src/who_will_viral/: __init__.py  __main__.py  acquire.py  clean.py  cli.py  deployment_preprocessor.py  feature_engineering.py  mlflow.db  mlflow_utilities.py  model_loader.py  train.py  utils.py  validate.py  validation_cleaned.py
src/who_will_viral/data_acquisition/: __init__.py  youtube_api.py  youtube_database.py  youtube_scraper.py
src/who_will_viral/feature_engineering/: feature_extraction.py  feature_scaling.py  feature_selection.py
src/who_will_viral/models/: mlflow_config.py  mlflow_utilities.py  model.pkl  pca_model.pkl  scaler.joblib  trials_basic.ipynb
src/who_will_viral/models/mlruns/144743981280628231/: meta.yaml
src/who_will_viral/models/mlruns/144743981280628231/451b1ae2bcb04f0a8cdd3414824d8e52/: meta.yaml
src/who_will_viral/models/mlruns/144743981280628231/451b1ae2bcb04f0a8cdd3414824d8e52/metrics/: accuracy  f1  precision  recall  roc_auc
src/who_will_viral/models/mlruns/144743981280628231/451b1ae2bcb04f0a8cdd3414824d8e52/outputs/m-b33fb90c9ed9483181cd199f64b40419/: meta.yaml
src/who_will_viral/models/mlruns/144743981280628231/451b1ae2bcb04f0a8cdd3414824d8e52/tags/: mlflow.runName  stage
src/who_will_viral/models/mlruns/144743981280628231/80e76661604349299c87f3aa096276eb/: meta.yaml
src/who_will_viral/models/mlruns/144743981280628231/80e76661604349299c87f3aa096276eb/metrics/: accuracy  f1  precision  recall  roc_auc
src/who_will_viral/models/mlruns/144743981280628231/80e76661604349299c87f3aa096276eb/outputs/m-3fdbdbe85080420080dfe165e855bf76/: meta.yaml
src/who_will_viral/models/mlruns/144743981280628231/80e76661604349299c87f3aa096276eb/tags/: mlflow.runName
src/who_will_viral/models/mlruns/144743981280628231/bbc68e97c030486890b33f71ed1ffc91/: meta.yaml
src/who_will_viral/models/mlruns/144743981280628231/bbc68e97c030486890b33f71ed1ffc91/metrics/: accuracy  f1  precision  recall  roc_auc
src/who_will_viral/models/mlruns/144743981280628231/bbc68e97c030486890b33f71ed1ffc91/outputs/m-837f0ce1caee4aeca24497756d2b4554/: meta.yaml
src/who_will_viral/models/mlruns/144743981280628231/bbc68e97c030486890b33f71ed1ffc91/tags/: mlflow.runName  mlflow.source.name
src/who_will_viral/models/mlruns/144743981280628231/models/m-3fdbdbe85080420080dfe165e855bf76/: meta.yaml
src/who_will_viral/models/mlruns/144743981280628231/models/m-3fdbdbe85080420080dfe165e855bf76/artifacts/: MLmodel  model.pkl  requirements.txt
src/who_will_viral/models/mlruns/144743981280628231/models/m-3fdbdbe85080420080dfe165e855bf76/metrics/: accuracy  f1  precision  recall  roc_auc
src/who_will_viral/models/mlruns/144743981280628231/models/m-837f0ce1caee4aeca24497756d2b4554/: meta.yaml
src/who_will_viral/models/mlruns/144743981280628231/models/m-837f0ce1caee4aeca24497756d2b4554/artifacts/: MLmodel  conda.yaml  model.pkl
src/who_will_viral/models/mlruns/144743981280628231/models/m-837f0ce1caee4aeca24497756d2b4554/metrics/: accuracy  f1  precision  recall  roc_auc
src/who_will_viral/models/mlruns/144743981280628231/models/m-b33fb90c9ed9483181cd199f64b40419/: meta.yaml
src/who_will_viral/models/mlruns/144743981280628231/models/m-b33fb90c9ed9483181cd199f64b40419/artifacts/: MLmodel  model.pkl
src/who_will_viral/models/mlruns/144743981280628231/models/m-b33fb90c9ed9483181cd199f64b40419/metrics/: accuracy  f1  precision  recall  roc_auc
src/who_will_viral/models/mlruns/144743981280628231/models/m-b33fb90c9ed9483181cd199f64b40419/params/: imbalance
src/who_will_viral/visualization/: visualization.py
tests/: conftest.py  test_who_will_viral.py
tests/integration/: test_api_cli.py  test_data_pipeline.py  test_model_training.py  test_pipeline_flow.py
tests/unit/: test_acquire.py  test_clean.py  test_cli_and_utils.py  test_coverage_edge_cases.py  test_feature_engineering.py  test_feature_extraction.py  test_feature_scaling.py  test_main_module.py  test_model_trainer.py  test_validate.py  test_validate_additional.py  test_youtube_api.py  test_youtube_database.py  test_youtube_scrapper.py
who_will_viral/: CONTRIBUTING.md  README.md  justfile  zensical.toml
who_will_viral/.github/ISSUE_TEMPLATE/: bug_report.yml
who_will_viral/.github/workflows/: publish.yml
who_will_viral/CHANGELOG/: 0.1.0.md
who_will_viral/docs/: index.md  usage.md
