[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "who_will_viral"
version = "0.1.0"
description = "This project predicts if the youtube video is going to trend or not based on some features like description, number of likes, number of comments, etc.. ."
readme = "README.md"
authors = [
  {name = "team_15", email = "audreyfeldroy@example.com"}
]
maintainers = [
  {name = "team_15", email = "audreyfeldroy@example.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "rich",
  "emoji>=2.15.0",
  "scikit-learn>=1.8.0",
  "sentence-transformers>=5.3.0",
  "pandas>=2.0",
  "requests>=2.33.1",
  "logging>=0.4.9.6",
  "google-api-python-client>=2.193.0",
  "great-expectations>=1.16.0",
  "bs4>=0.0.2",
  "python-dotenv>=1.2.2",
  "matplotlib>=3.10.8",
  "imblearn>=0.0",
  "optuna>=4.8.0",
  "xgboost>=3.2.0",
  "mlflow>=2.14.0",
  "protobuf<4",
  "seaborn>=0.13.2",
]
requires-python = ">=3.12,<3.14"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
]
typecheck = [
    "ty",
]
docs = [
    "zensical",
    "mkdocstrings-python",
]

[project.urls]
bugs = "https://github.com/zizoisprogramming/who_will_viral/issues"
changelog = "https://github.com/zizoisprogramming/who_will_viral/releases"
documentation = "https://zizoisprogramming.github.io/who_will_viral/"
homepage = "https://github.com/zizoisprogramming/who_will_viral"

[project.scripts]
who_will_viral = "who_will_viral.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
default-groups = ["dev"]
