[tool.poetry]
name = "who-will-viral"
version = "0.1.0"
description = "This project predicts if the youtube video is going to trend or not based on some features like description, number of likes, number of comments, etc.. ."
readme = "README.md"
authors = ["team_15 <audreyfeldroy@example.com>"]
license = "MIT"
packages = [{ include = "who_will_viral", from = "src" }]

[tool.poetry.scripts]
who_will_viral = "who_will_viral.cli:app"

[tool.poetry.urls]
"Homepage" = "https://github.com/zizoisprogramming/who_will_viral"
"Documentation" = "https://zizoisprogramming.github.io/who_will_viral/"
"Bug Tracker" = "https://github.com/zizoisprogramming/who_will_viral/issues"
"Changelog" = "https://github.com/zizoisprogramming/who_will_viral/releases"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
typer = "*"
rich = "*"
emoji = ">=2.15.0"
scikit-learn = ">=1.8.0"
sentence-transformers = ">=5.3.0"
pandas = ">=2.0"
requests = ">=2.33.1"
google-api-python-client = ">=2.193.0"
great-expectations = ">=1.16.0"
bs4 = ">=0.0.2"
python-dotenv = ">=1.2.2"
matplotlib = ">=3.10.8"
imblearn = ">=0.0"
optuna = ">=4.8.0"
xgboost = ">=3.2.0"
mlflow = ">=2.14.0"
protobuf = "<4"
seaborn = ">=0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3"
pytest-cov = ">=7.1.0"
pytest-mock = ">=3.15.1"
ruff = "*"
coverage = "*"
ty = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Keep your existing tool configs below unchanged:
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@typing.overload",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pytest.ini_options]
testpaths = ["tests"]